--- a/2021:1114.md
+++ b/2021:1114.md
@@ -3,6 +3,7 @@ layout: law
 name:
   sv: "Medbestämmandelagen"
   en: "The Swedish Co-Determination Act"
+abbreviation: MBL
 code: 2021:1114
 elements:
 - type: document_heading
